--- a/app/resources/application.conf
+++ b/app/resources/application.conf
@@ -1,10 +1,15 @@
 ktor {
     deployment {
         port = 8080
-        port = ${?PORT}
         watch = [wsb_inz/app]
     }
     application {
-        modules = [ com.wsbinz.ApplicationKt.module ]
+        modules = [ com.wsbinz.ApplicationKt.mainWithDependencies ]
     }
+}
+
+jwt {
+    domain = "https://jwt-provider-domain/"
+    audience = "jwt-audience"
+    realm = "ktor sample app"
 }
