- prace związane z wyglądem panelu admina

--- a/app/src/main/resources/application.conf
+++ b/app/src/main/resources/application.conf
@@ -1,15 +1,12 @@
 ktor {
   deployment {
     port = 8080
+    port = ${?PORT}
+    sslPort = 8890
+    sslPort = ${?PORT_SSL}
   }
   application {
     modules = [com.wsbinz.ApplicationKt.main]
   }
-}
-
-jwt {
-  domain = "https://jwt-provider-domain/"
-  audience = "jwt-audience"
-  realm = "ktor sample app"
 }
 
