--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile "io.ktor:ktor-server-netty:$ktor_version"
     compile "ch.qos.logback:logback-classic:$logback_version"
     compile "io.ktor:ktor-locations:$ktor_version"
+    compile("io.ktor:ktor-server-sessions:$ktor_version")
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
     implementation("io.ktor:ktor-gson:$ktor_version")
     implementation("io.ktor:ktor-freemarker:$ktor_version")
